--- a/main/src/addins/WindowsPlatform/WindowsPlatform/WindowsPlatform.csproj
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/WindowsPlatform.csproj
@@ -127,6 +127,7 @@
     <Compile Include="CustomDialogs\CustomCommonFileDialogComboBox.cs" />
     <Compile Include="CustomDialogs\CustomCommonSaveFileDialog.cs" />
     <Compile Include="Dialogs\CommonFileDialogExtensions.cs" />
+    <Compile Include="ImageHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="WindowsPlatform.addin.xml">
