[Icons] [Ide] Platform-specific md-searchbox-search icon

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -945,11 +945,14 @@
     <EmbeddedResource Include="icons\searchbox-clear-16%402x.png">
       <LogicalName>searchbox-clear-16@2x.png</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\searchbox-search-16.png">
-      <LogicalName>searchbox-search-16.png</LogicalName>
+    <EmbeddedResource Include="icons\searchbox-search-mac-16.png">
+      <LogicalName>searchbox-search-mac-16.png</LogicalName>
     </EmbeddedResource>
-    <EmbeddedResource Include="icons\searchbox-search-16%402x.png">
-      <LogicalName>searchbox-search-16@2x.png</LogicalName>
+    <EmbeddedResource Include="icons\searchbox-search-mac-16%402x.png">
+      <LogicalName>searchbox-search-mac-16@2x.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="icons\searchbox-search-win-16.png">
+      <LogicalName>searchbox-search-win-16.png</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="icons\tree-popup-button.png">
       <LogicalName>tree-popup-button.png</LogicalName>
